<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".presentation.detail.DetailMovieActivity"
    tools:showIn="@layout/activity_detail_movie">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp">

        <TextView
            android:id="@+id/dm_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_v2"
            android:textColor="@color/dark"
            android:textSize="27sp"
            android:textStyle="bold"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/dm_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dm_title"
            android:layout_marginEnd="@dimen/margin_v2"
            android:layout_marginBottom="@dimen/margin_v2"
            android:gravity="start|center_vertical"
            android:textColor="@color/dark"
            android:textSize="15sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_star" />

        <TextView
            android:id="@+id/dm_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dm_rate"
            android:layout_marginBottom="@dimen/margin_v2"
            android:textColor="@color/dark"
            android:textSize="14sp"
            tools:text="@string/genre" />

        <TextView
            android:id="@+id/txt_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dm_genre"
            android:layout_marginEnd="@dimen/margin_v2"
            android:layout_marginBottom="@dimen/margin_v2"
            android:text="@string/runtime"
            android:textColor="@color/dark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/dm_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dm_genre"
            android:layout_marginBottom="@dimen/margin_v2"
            android:layout_toEndOf="@id/txt_duration"
            android:textColor="@color/dark"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/txt_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dm_duration"
            android:layout_marginEnd="@dimen/margin_v2"
            android:layout_marginBottom="@dimen/margin_v2"
            android:text="@string/release_date"
            android:textColor="@color/dark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/dm_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dm_duration"
            android:layout_marginEnd="@dimen/margin_v2"
            android:layout_marginBottom="@dimen/margin_v2"
            android:layout_toEndOf="@id/txt_date"
            android:textColor="@color/dark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dm_date"
            android:layout_marginEnd="@dimen/margin_v2"
            android:layout_marginBottom="@dimen/margin_v2"
            android:text="@string/status"
            android:textColor="@color/dark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/dm_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dm_date"
            android:layout_toEndOf="@id/txt_duration"
            android:textColor="@color/dark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/dm_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dm_status"
            android:layout_marginTop="@dimen/margin_v1"
            android:textColor="@color/dark"
            android:textSize="16sp"
            tools:text="this ini overview" />
    </RelativeLayout>

</androidx.core.widget.NestedScrollView>
